--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
+}
+
+#wrapper {
     background-image: url("./assets/full-moon.jpg");
 /*     background-size: auto;
     background-position: center;
     background-repeat: no-repeat; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    height: 100%;
 
 }
 
