--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
     border-radius: 10px;
     display:flex;
     flex-direction: column;
+    box-shadow: 2px 2px 10px black;
+
 }
 
 header {
@@ -67,7 +69,7 @@ header {
     cursor: pointer;
     outline:none;
     padding: 5px;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 2px 2px 10px black;
 
 
 }
@@ -78,7 +80,7 @@ header {
 }
 .knapp:active {
     text-decoration: none; 
-    box-shadow: inset 0px 0px 20px white;
+    box-shadow: none;
     color: black;
 }
 
@@ -97,4 +99,6 @@ header {
     border-radius: 10px;
     display:flex;
     flex-direction: column;
+    box-shadow: 2px 2px 10px black;
+
 }
